# Notepad

./: CMakeLists.txt  Collection.cpp  Collection.h  Nota.cpp  Nota.h  Observer.h  QuantityObserver.cpp  QuantityObserver.h  Subject.h  main.cpp
Google_tests/: TestCollection.cpp
test/: CMakeLists.txt  RunAllTests.cpp  TestCollection.cpp  TestNota.cpp  TestQuantityObserver.cpp
